[package]
name = "examplepw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dotenvy = "0.15.7"
identity_eddsa_verifier = "1.3.1"
identity_iota = "1.3.1"
identity_storage = "1.3.1"
identity_stronghold = "1.3.1"
iota-sdk = "1.1.5"
iota_stronghold = "2.1.0"
primitive-types = "0.12.2"
rand = "0.8.5"
sd-jwt-payload = "0.2.1"
serde = "1.0.203"
serde_json = "1.0.118"
tokio = "1.38.0"


[lib]
path = "utils/lib.rs"

[[bin]]
name = "createdid"
path = "src/createdid.rs"

[[bin]]
name = "createvc"
path = "src/issuevc.rs"